--- a/style.css/styles.css
+++ b/style.css/styles.css
@@ -3,8 +3,8 @@
   background-color: rgb(128, 39, 30);
 }
 
-.nav-item li a{
-  color: rgb(35, 38, 73) ;
+.nav-item li a {
+  color: rgb(35, 38, 73);
   margin: 10px;
 }
 
@@ -13,66 +13,64 @@
   margin: 2px;
   font-weight: bolder;
   transform: scale(1.3);
-  transition: ease-in-out .5s;
+  transition: ease-in-out 0.5s;
 }
-
 
 .logonegocio {
-    display: flex;
-    justify-content:left;
-    width: 120px;
-    height: 110px;
-  }
-
-  .container-fluid{
-    justify-content: space-between;
-    background: linear-gradient(135deg, #a3940b55 75%, transparent 5%);
-  }
-
-  .carousel-inner img {
-    /* flex-direction: wrap ; */
-    max-height: 650px;
-    /* width: 100% ; */
+  display: flex;
+  justify-content: left;
+  width: 120px;
+  height: 110px;
 }
 
-.foto{
+.container-fluid {
+  justify-content: space-between;
+  background: linear-gradient(135deg, rgba(163, 148, 11, 0.3333333333) 75%, transparent 5%);
+}
+
+.carousel-inner img {
+  /* flex-direction: wrap ; */
+  max-height: 650px;
+  /* width: 100% ; */
+}
+
+.foto {
   width: 350px;
   height: 340px;
 }
 
-
-.mapa{
+.mapa {
   display: flex;
-  justify-content:center;
+  justify-content: center;
   margin-left: 5px;
   margin-bottom: 50px;
   transition: all 1s;
 }
 
-.mapa :hover{
-  transform: scale(1.10);
+.mapa :hover {
+  transform: scale(1.1);
 }
 
-.tituloprincipal{
+.tituloprincipal {
   text-decoration: underline;
-  color: rgb(19, 1, 1) ;
+  color: rgb(19, 1, 1);
   font-weight: border;
   margin-left: 3px;
 }
 
-.historia{
+.historia {
   margin-left: 5px;
 }
 
-.consultaUbicacion{
+.consultaUbicacion {
   display: flex;
   justify-content: center;
   text-decoration: underline;
-  color: rgb(19, 1, 1) ;
+  color: rgb(19, 1, 1);
   margin-left: 3px;
 }
 
-.formularioContacto{
+.formularioContacto {
   margin-left: 10px;
   margin-bottom: 5px;
 }
@@ -87,20 +85,20 @@
 .iconos a i:hover {
   color: rgb(175, 107, 0);
   transform: scale(1.5);
-  transition: ease-in-out .5s;
+  transition: ease-in-out 0.5s;
 }
 
-.card{
+.card {
   display: flex;
   flex-direction: row;
-  justify-content:space-between;
+  justify-content: space-between;
   max-width: 250px;
   max-height: 250px;
   margin: 15px;
   margin-left: 150px;
 }
 
-.costuras{
+.costuras {
   display: flex;
   justify-content: space-between;
   border-radius: 20px;
@@ -110,8 +108,8 @@
   margin-left: 500px;
 }
 
-.instructivo{
+.instructivo {
   margin-left: 100px;
   text-decoration: none;
   margin-left: 600px;
-}
+}/*# sourceMappingURL=styles.css.map */
