--- a/style.css/styles.scss
+++ b/style.css/styles.scss
@@ -3,18 +3,27 @@
     background-color: rgb(128, 39, 30);
   }
   
-  .nav-item li a{
+.nav-item li {
+    a {
     color: rgb(35, 38, 73) ;
     margin: 10px;
-  }
+        &:hover {
+        color: rgb(128, 39, 30);
+        margin: 2px;
+        font-weight: bolder;
+        transform: scale(1.3);
+        transition: ease-in-out .5s;
+         }
+        }
+    }
   
-  .nav-item a:hover {
-    color: rgb(128, 39, 30);
-    margin: 2px;
-    font-weight: bolder;
-    transform: scale(1.3);
-    transition: ease-in-out .5s;
-  }
+//   .nav-item a:hover {
+//     color: rgb(128, 39, 30);
+//     margin: 2px;
+//     font-weight: bolder;
+//     transform: scale(1.3);
+//     transition: ease-in-out .5s;
+//   }
   
   .logonegocio {
       display: flex;
@@ -46,11 +55,14 @@
     margin-left: 5px;
     margin-bottom: 50px;
     transition: all 1s;
+    &:hover {
+        transform: scale(1.06);
+    }
   }
   
-  .mapa :hover{
-    transform: scale(1.10);
-  }
+//   .mapa :hover{
+//     transform: scale(1.10);
+//   }
   
   .tituloprincipal{
     text-decoration: underline;
@@ -81,13 +93,20 @@
     color: rgb(218, 205, 170);
     font-size: 40px;
     margin: 8px;
+    i {
+        &:hover {
+            color: rgb(175, 107, 0);
+            transform: scale(1.5);
+            transition: ease-in-out .5s;
+        }
+    }
   }
   
-  .iconos a i:hover {
-    color: rgb(175, 107, 0);
-    transform: scale(1.5);
-    transition: ease-in-out .5s;
-  }
+//   .iconos a i:hover {
+//     color: rgb(175, 107, 0);
+//     transform: scale(1.5);
+//     transition: ease-in-out .5s;
+//   }
   
   .card{
     display: flex;
